# se_test_cases

./: .gitignore  README.md  config.toml  grafana_dashboard.json  pyproject.toml
configs/: power_curtailment_config.toml
project_summary/: Makefile  project_summary.tex  project_summary_de.tex  project_summary_phase2.tex  project_summary_phase2_de.tex  settings.tex
scripts/: start_grafana.sh
snap/: snapcraft.yaml
src/app/: config.py  ev_charging_main.py  influx_reporter.py  run_tests.py
src/power_curtailment/: __init__.py  app.py  config.py  power_curtailment.py
src/se_test_cases/: dynamic_condition_on_grid.py
src/test_cases/: dynamic_condition_on_grid.py
tests/: test_ev_charging_main.py  test_power_curtailment.py
